javali_tests/OwnTestCases/ReturnMissing.javali.err
Debug information for file: javali_tests/OwnTestCases/ReturnMissing.javali
AST Resulting From Parsing Stage:
ClassDecl (name: Main, superClass: Object)
| MethodDecl (argumentNames: [], argumentTypes: [], name: main, returnType: void)
| | Seq ()
| | Seq ()
| MethodDecl (argumentNames: [], argumentTypes: [], name: a, returnType: int)
| | Seq ()
| | Seq ()
Error message from reference is: Method Main.a is missing a return statement

Phase semantic failed because we expected to see:
MISSING_RETURN
But we actually saw:
OK
The difference is:
At line   1 /   1:
< MISSING_RETURN
> OK

