javali_tests/OwnTestCases/ReturnMissing.javali
class Main {
   void main() {	
		
	}
	
	int a(){
	
	}
}